--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDXJtxVDEFknxJYwWAjKCce-mHuDxY2gqU"></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
@@ -44,6 +45,7 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
+  <!--Sample HTTP Request
+  http://localhost:8080/otp/routers/default/plan?fromPlace=14.66582,%20121.07101&toPlace=14.62642,%20121.06138&mode=TRANSIT%2CWALK&maxWalkDistance=3000&arriveBy=false&wheelchair=false -->
 </body>
 </html>
