--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -46,7 +46,7 @@
         </ion-item>
       </ion-list>
       <div text-center>
-        <button color=secondary ion-button block (click)="setOrgDes(address)">GO</button>
+        <button color=secondary ion-button block (click)="findRoute(address)">GO</button>
       </div>
     </div>
     <div #map id="map"></div>
