--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="danger">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Mateo We Miss You</ion-title>
+    <ion-title></ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -46,7 +46,7 @@
         </ion-item>
       </ion-list>
       <div text-center>
-        <button color=secondary ion-button block (click)="findRoute(address)">GO</button>
+        <button color=danger ion-button block (click)="findRoute(address)">GO</button>
       </div>
     </div>
     <div #map id="map"></div>
