--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content padding>
 	<div text-center>
-		<ion-icon name="heart" class="loginlogo"></ion-icon>
+		<ion-icon name="bus" class="loginlogo"></ion-icon>
 	</div>
 	<ion-list>
 		<ion-item>
@@ -13,7 +13,7 @@
 		</ion-item>
 	</ion-list>
 	<div text-center>
-  		<button color=secondary (click)="signIn(user);" ion-button block>Sign In</button>
+  		<button color=danger (click)="signIn(user);" ion-button block>Sign In</button>
 	</div>
 	<div text-center>
 		<ion-icon name="ios-arrow-dropdown-circle" class="or"></ion-icon>
