--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,9 @@
 <ion-content padding>
+	<br /><br />
 	<div text-center>
-		<ion-icon name="bus" class="loginlogo"></ion-icon>
+		<ion-img width="120" height="120" src="./assets/imgs/login.png"></ion-img>
 	</div>
+	<br /><br />
 	<ion-list>
 		<ion-item>
 			<ion-label floating>Email</ion-label>
@@ -13,11 +15,13 @@
 		</ion-item>
 	</ion-list>
 	<div text-center>
-  		<button color=danger (click)="signIn(user);" ion-button block>Sign In</button>
+  		<button color=primary (click)="signIn(user);" ion-button block>Sign In</button>
 	</div>
+	<br /><br />
 	<div text-center>
 		<ion-icon name="ios-arrow-dropdown-circle" class="or"></ion-icon>
 	</div>
+	<br /><br />
 	<div text-center>
 		<ion-label>Sign In with:</ion-label>
 		<button ion-button><ion-icon name="logo-facebook"></ion-icon></button>
