--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -24,9 +24,8 @@
 	<br /><br />
 	<div text-center>
 		<ion-label>Sign In with:</ion-label>
-		<button ion-button><ion-icon name="logo-facebook"></ion-icon></button>
-		<button ion-button><ion-icon name="logo-twitter"></ion-icon></button>
-		<button ion-button><ion-icon name="logo-googleplus"></ion-icon></button>
+		<button ion-button (click)="facebooklogin()"><ion-icon name="logo-facebook"></ion-icon></button>
+		<button ion-button (click)="googlelogin()"><ion-icon name="logo-googleplus"></ion-icon></button>
 	</div>
 	<br/><br/><br/><br/><p (click)="register();"><u>Don't have an account?</u></p>
 </ion-content>
