--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -10,8 +10,9 @@
       <ion-row *ngFor="let item of description; let i = index;" class='cell-{{i}}' text-wrap no-padding no-margin>
         <ion-col col-2 class="col icon-col">
           <ion-img width="50" height="50" [src]="modeIcons[i]">Less Fare</ion-img>
-        </ion-col>
+        </ion-col>      
         <ion-col col-95>
+          <p>{{ description[i].from }}</p>
           <p>{{ description[i].route }}</p>
           <p>{{ description[i].fare }}</p>
           <p>{{ description[i].fare2 }}</p>
@@ -19,8 +20,8 @@
             <ion-icon ios="ios-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
           </button>
 
-          <ion-list [hidden]="drop" no-padding>
-            <ion-item *ngFor="let step of description[i].steps">{{ step }}</ion-item>
+          <ion-list no-padding>
+            <ion-item [hidden]="drop" *ngFor="let step of description[i].steps">{{ step }}</ion-item>
           </ion-list>
         </ion-col>
         <ion-col col-2 no-padding>
