--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -9,7 +9,7 @@
     <ion-grid>
       <ion-row *ngFor="let item of description; let i = index;" class='cell-{{i}}' text-wrap no-padding no-margin>
         <ion-col col-2 class="col icon-col">
-          <ion-img width="50" height="50" [src]="modeIcons[i]">Less Fare</ion-img>
+          <ion-img width="50" height="50" [src]="modeIcons[i]"></ion-img>
         </ion-col>      
         <ion-col col-95>
           <p>{{ description[i].from }}</p>
@@ -17,7 +17,7 @@
           <p>{{ description[i].route }}</p>
           <p>{{ description[i].fare }}</p>
           <p>{{ description[i].fare2 }}</p>
-          <button (click)="setDrop()">
+          <button [hidden]="!description[i].steps" (click)="setDrop()">
             <ion-icon ios="ios-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
           </button>
 
@@ -28,6 +28,14 @@
         <ion-col col-2 no-padding>
           <p>{{ description[i].distance }}</p>
           <p>{{ description[i].time }}</p>
+        </ion-col>
+      </ion-row>
+      <ion-row class='cell-{{ description.length }}' text-wrap no-padding no-margin>
+        <ion-col col-2 class="col icon-col">
+          <ion-img width="50" height="50" [src]="modeIcons[description.length-1]"></ion-img>
+        </ion-col>
+        <ion-col col-95>
+          <p>{{ address.destination }}</p>
         </ion-col>
       </ion-row>
     </ion-grid>
