--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDXJtxVDEFknxJYwWAjKCce-mHuDxY2gqU"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBA8afCEmJlx7x85ly98f9ZzsCabewOtUA&sensor=true"></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
