--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -40,7 +40,7 @@
         <ion-col>
           <p>Travel Summary:</p>
           <p>Estimated Time: {{trip[index].fare }} min</p>
-          <p>Total Fare: P{{ trip[index].fare }}.00</p>
+          <p>Total Fare: P{{ trip[index].fare }}</p>
           <p>Distance: {{ trip[index].totaldistance }} km</p>
           <p>Walk Distance: {{ trip[index].totalWalkDistance }} km</p>
           <p>Transfers: {{ trip[index].transfer }}</p>
