--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <script data-ionic="inject">
-    (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.9.2';i.angular='5.0.1';i.staticDir='build/';})(window);
-  </script>
   <meta charset="UTF-8">
   <title>Ionic App</title>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -18,7 +15,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDXJtxVDEFknxJYwWAjKCce-mHuDxY2gqU"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBA8afCEmJlx7x85ly98f9ZzsCabewOtUA&sensor=true"></script>
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
