--- a/src/pages/routes/routes.html
+++ b/src/pages/routes/routes.html
@@ -22,7 +22,7 @@
                         </ion-segment-button>
                         <ion-segment-button value="lesstime" (click)="sortTime()">
                             <!-- <ion-img width="20" height="20" src="./assets/imgs/roundtrip.png">Round-trip</ion-img> -->
-                            Less travel time
+                            Less time
                         </ion-segment-button>
                     </ion-segment>
                 </ion-toolbar>
