--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,5 +1,10 @@
 <ion-header>
     <ion-navbar>
+        <ion-buttons end>
+          <button (click)="saveTrip()">
+              <ion-icon class="btn-save" ios="ios-add-circle" md="md-add-circle"></ion-icon>
+          </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
