--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -44,7 +44,7 @@
       <ion-row>
         <ion-col>
           <p>Travel Summary:</p>
-          <p>Estimated Time: {{trip[index].fare }} min</p>
+          <p>Estimated Time: {{trip[index].totalTime }} min</p>
           <p>Total Fare: P{{ trip[index].fare }}</p>
           <p>Distance: {{ trip[index].totaldistance }} km</p>
           <p>Walk Distance: {{ trip[index].totalWalkDistance }} km</p>
