--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar color=primary>
         <ion-buttons end>
           <button (click)="saveTrip()">
               <ion-icon class="btn-save" ios="ios-add-circle" md="md-add-circle"></ion-icon>
