--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,7 +15,7 @@
 		</ion-item>
 	</ion-list>
 	<div text-center>
-  		<button color=primary (click)="signIn(user);" ion-button block>Sign In</button>
+  		<button color=secondary-yellow (click)="signIn(user);" ion-button block>Sign In</button>
 	</div>
 	<br />
 	<div text-center>
