--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -67,8 +67,8 @@
             <ion-item>
                 <ion-toolbar>
                     <ion-segment color=primary>
-                        <ion-segment-button value="lessfare" (click)="sortFare()">
-                             <ion-img width="30" height="30" src="./assets/imgs/lessfare.png">Less Fare</ion-img>
+                      <ion-segment-button value="lessfare" (click)="sortFare()">
+                            <ion-img width="30" height="30" src="./assets/imgs/lessfare.png">Less Fare</ion-img>
                             Less fare
                         </ion-segment-button>
                         <ion-segment-button value="lesswalk" (click)="sortWalk()">
@@ -76,6 +76,7 @@
                             Less walk
                         </ion-segment-button>
                         <ion-segment-button value="lesstransfer" (click)="sortTransfer()">
+                            <ion-img width="20" height="20" src="./assets/imgs/lesstransfer.png">Less Walk</ion-img>
                             Less transfer
                         </ion-segment-button>
                         <ion-segment-button value="lesstime" (click)="sortTime()">
