--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,7 @@
 <ion-content padding class="startLogin">
 	<br /><br />
 	<div text-center>
-		<ion-img width="120" height="120" src="./assets/imgs/login.png"></ion-img>
+		<ion-img width="120" height="120" src="./assets/imgs/login3.png"></ion-img>
 	</div>
 	<br /><br />
 	<ion-list>
