--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,5 +1,7 @@
 <ion-header>
     <ion-navbar color=custom-yellow>
+      <ion-title >From: {{ address.origin }} <br/> To: {{ address.destination }}
+      </ion-title>
         <ion-buttons end>
           <button (click)="saveTrip()">
               <ion-icon class="btn-save" ios="ios-add-circle" md="md-add-circle"></ion-icon>
