--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -35,7 +35,10 @@
       <button ion-button menuToggle icon-only class="menu-button" >
         <ion-icon name='menu'></ion-icon>
       </button>
-      <ion-title>Menus</ion-title>
+      <div class="titleicon">
+          <img src="./assets/imgs/login3.png" width="25px"  />
+         </div>
+         <ion-title class="TruFare">TruFare</ion-title>
     </ion-navbar>
   </ion-header>
   <ion-content>
