--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,9 @@
 <ion-content padding class="startLogin">
-	<br /><br />
+	<br />
 	<div text-center>
-		<ion-img width="120" height="120" src="./assets/imgs/login3.png"></ion-img>
+		<ion-img width="200" height="200" src="./assets/imgs/login4.png"></ion-img>
 	</div>
-	<br /><br />
+	<br />
 	<ion-list>
 		<ion-item>
 			<ion-label floating>Email</ion-label>
@@ -27,5 +27,5 @@
 		<button ion-button (click)="facebooklogin()"><ion-icon name="logo-facebook"></ion-icon></button>
 		<button ion-button (click)="googlelogin()"><ion-icon name="logo-googleplus"></ion-icon></button>
 	</div>
-	<br/><br/><p (click)="register();"><u>Don't have an account?</u></p>
+	<br/><p (click)="register();"><u>Don't have an account?</u></p>
 </ion-content>
